# roman_datamodels

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  MANIFEST.in  README.md  bandit.yaml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: archive.yml  build.yml  changelog.yml  ci.yml  ci_cron.yml  contexts.yml  publish-to-pypi.yml  release.yml  tests.yml  tests_extra.yml
changes/: 372.bugfix.rst  388.bugfix.rst  389.feature.rst  393.feature.rst  396.misc.rst  397.feature.rst  401.feature.rst  402.misc.rst  404.feature.rst  405.removal.rst  408.feature.rst  409.feature.rst  412.bugfix.rst  415.removal.rst  417.removal.rst  421.bugfix.rst  423.misc.rst  425.bugfix.rst  428.feature.rst  437.docs.rst  440.feature.rst  441.feature.rst  441.skycell.rst  445.feature.rst  448.feature.rst  453.feature.rst  455.feature.rst  458.feature.rst  469.feature.rst  473.feature.rst  474.feature.rst  475.feature.rst  477.feature.rst  484.feature.rst  485.removal.rst  487.misc.rst  488.feature.rst  489.feature.rst  491.misc.rst  492.feature.rst  (+83 more)
docs/: conf.py  index.rst  models.rst  rtd_environment.yaml  structure.rst
docs/rad/: Makefile  ccsp.rst  changes.rst  conf.py  contributing.rst  creating.rst  ground_tests.rst  helper.rst  index.rst  legacy.rst  manifests.rst  reference_files.rst  schemas.rst  ssc.rst  versioning.rst
docs/roman_datamodels/: introduction.rst  package_index.rst
docs/roman_datamodels/datamodels/: creating_datamodels.rst  developer_api.rst  general_structure.rst  index.rst  introduction.rst  models.rst  stnode.rst  using_datamodels.rst
docs/roman_datamodels/datamodels/api_docs/: core.rst  datamodels.rst
docs/roman_datamodels/datamodels/overview/: roman_datamodels.rst
scripts/: insert_next_release  set_release_date
src/roman_datamodels/: __init__.py  _manager.py  conftest.py  datamodels.py  dqflags.py  dynamicdq.py  extensions.py  filetype.py  integration.py  maker_utils.py  mkskycell.py  mktest.py  random_utils.py  rconverters.py  stnode.py  stnode.pyi  stnode_test.py  stuserdict.py  table_definitions.py  testing.py  units.py  util.py  validate.py
src/roman_datamodels/_asdf/: converters.py  integration.py  manifest.py  versioning.py
src/roman_datamodels/_maker_utils/: __init__.py  _base.py  _basic_meta.py  _common_meta.py  _datamodels.py  _fps.py  _fps_basic_meta.py  _fps_common_meta.py  _ref_files.py  _tagged_nodes.py  _tvac.py  _tvac_basic_meta.py  _tvac_common_meta.py
src/roman_datamodels/_stnode/: __init__.py  __init__.pyi  _converters.py  _explicit.py  _factories.py  _integration.py  _manifest.py  _mixins.py  _node.py  _registry.py  _schema.py  _stnode.py  _stnode.pyi  _tagged.py  _uri.py  _utils.py
src/roman_datamodels/_typing/: _stnode.py  base.py  enums.py  maker.py  stnode.py  stnode.pyi  stubs.py
src/roman_datamodels/associations/: __init__.py  asn_edit.py  asn_from_list.py  asn_gather.py  association.py  association_io.py  load_as_asn.py  load_asn.py  main.py  mkpool.py  registry.py
src/roman_datamodels/core/: __init__.py  _base.py  _extended.py  _metadata.py  _model.py  _open.py  _utils.py
src/roman_datamodels/core/adaptors/: __init__.py  _adaptor_tags.py  _astropy_quantity.py  _astropy_time.py  _astropy_unit.py  _base.py  _gwcs_wcs.py  _ndarray.py
src/roman_datamodels/datamodels/: __init__.py  _api.py  _asdf.py  _core.py  _datamodels.py  _factory.py  _meta_blender.py  _mixins.py  _utils.py  converter.py  datamodel.py  extended_models.py  extension.py  integration.py
src/roman_datamodels/datamodels/asdf/: __init__.py  _extension.py  _integration.py
src/roman_datamodels/generator/: __init__.py  __main__.py  _adaptor.py  _generator.py  _parser.py  _reslover.py  _schema.py  _utils.py  _writer.py
src/roman_datamodels/generator/custom_templates/: BaseModel.jinja2  RootModel.jinja2
src/roman_datamodels/io/: _converters.py  _integration.py
src/roman_datamodels/maker_utils/: __init__.py  _base.py  _basic_meta.py  _common_meta.py  _datamodels.py  _fps.py  _fps_common_meta.py  _ground.py  _maker_utils.py  _ref_files.py  _tagged_nodes.py  _tvac.py  _tvac_basic_meta.py  _tvac_common_meta.py  mk_skycell_ref.py
src/roman_datamodels/nodes/: __init__.py
src/roman_datamodels/nodes/datamodels/: __init__.py  associations.py  guidewindow.py  image_source_catalog.py  mosaic_segmentation_map.py  mosaic_source_catalog.py  msos_stack.py  ramp.py  ramp_fit_output.py  segmentation_map.py  wfi_image.py  wfi_mosaic.py  wfi_science_raw.py
src/roman_datamodels/nodes/fps/: __init__.py  fps.py
src/roman_datamodels/nodes/reference_files/: __init__.py  abvegaoffset.py  apcorr.py  dark.py  distortion.py  epsf.py  flat.py  gain.py  (+10 more)
src/roman_datamodels/pydantic/: __init__.py  converter.py  datamodel.py  extension.py  generator.py  integration.py  metadata.py
src/roman_datamodels/stnode/: __init__.py  _converters.py  _factories.py  _fixed.py  _individual_image_meta.py  _integration.py  _mixins.py  _node.py  _nodes.py  _registry.py  _schema.py  _stnode.py  _tagged.py  _validators.py
src/roman_datamodels/testing/: __init__.py  assertions.py  factories.py  utils.py
src/roman_datamodels/tests/: test_models.py  util.py
tests/: _helpers.py  conftest.py  test_archive.py  test_asdf.py  test_copy.py  test_data_model.py  test_defaults.py  test_dqflags.py  test_extended_models.py  test_factories.py  test_filetype.py  test_generator.py  test_ivoa_compliant_units.py  test_maker_utils.py  test_moc_expectations.py  test_models.py  test_nodes.py  test_open.py  test_parquet.py  test_protections.py  test_random_utils.py  test_stnode.py  test_stnode_core.py  test_stubs.py  test_stuserdict.py  test_typehints.py  test_units.py  test_validation.py
tests/adaptor/: test_adaptors.py  test_astropy_quantity.py  test_astropy_time.py  test_astropy_unit.py  test_gwcs_wcs.py  test_ndarray.py
tests/data/: fake.json  not_a_datamodel.asdf  photmjsm.asdf
tests/stnode/: test_mixins.py  test_save.py  test_schema.py  test_time.py  test_uri.py
(+151 files in other folders)
