[project]
name = "roman_datamodels"
description = "data models supporting calibration of the Nancy Grace Roman Space Telescope"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "STScI", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "asdf >=2.15.0",
    "asdf-astropy >=0.5.0",
    "gwcs >=0.18.1",
    "numpy >=1.22",
    "astropy >=5.3.0",
    # "rad @ git+https://github.com/spacetelescope/rad.git",
    "rad >= 0.19.4",
    "asdf-standard >=1.0.3",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
test = [
    "pytest >=6.0.0",
    "pytest-doctestplus",
    "pytest-doctestplus >=0.10.0",
    "pytest-env >= 0.8",
]
aws = [
    "stsci-aws-utils >= 0.1.2",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "sphinx-astropy",
    "tomli; python_version <\"3.11\"",
]

[project.urls]
issues = "https://github.com/spacetelescope/roman_datamodels/issues"
repository = "https://github.com/spacetelescope/roman_datamodels"

[project.entry-points."asdf.extensions"]
roman_datamodels = "roman_datamodels.stnode._integration:get_extensions"

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/roman_datamodels/_version.py"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.pytest.ini_options]
minversion = 4.6
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
addopts = "--color=yes --doctest-rst"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]
env = [
    "ROMAN_VALIDATE=true",
    "ROMAN_STRICT_VALIDATION=true",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main\\(.*\\):",
    "if __name__ == \\(.*\\):",
    "pass\\n",
]

[tool.isort]
profile = "black"
filter_files = true
line_length = 130

[tool.black]
line-length = 130
force-exclude = "^/(\n  (\n      \\.eggs\n    | \\.git\n    | \\.pytest_cache\n    | \\.tox\n  )/\n)\n"

[tool.ruff]
line-length = 130

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"
