[project]
name = "roman_datamodels"
description = "data models supporting calibration of the Nancy Grace Roman Space Telescope"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "STScI", email = "help@stsci.edu" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "asdf >=4.1.0",
  "lz4 >= 4.3.0",
  "asdf-astropy >=0.6.0",
  "gwcs >=0.19.0",
  "numpy >=1.24",
  "astropy >=5.3.0",
  # "rad >=0.25.0",
  "rad @ git+https://github.com/spacetelescope/rad.git",
  "asdf-standard >=1.1.0",
  "pyarrow >= 10.0.1",
]
license-files = ["LICENSE"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest >=6.0.0",
  "pytest-doctestplus",
  "pytest-doctestplus >=1.2.1",
  "pytest-env >= 0.8",
  "pandas >=2.2.3",
]
docs = ["sphinx", "sphinx-automodapi", "sphinx-rtd-theme", "sphinx-astropy"]

[project.urls]
issues = "https://github.com/spacetelescope/roman_datamodels/issues"
repository = "https://github.com/spacetelescope/roman_datamodels"

[project.entry-points."asdf.extensions"]
roman_datamodels = "roman_datamodels.stnode._integration:get_extensions"

[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml] >=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/roman_datamodels/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = 6
doctest_plus = true
doctest_rst = true
text_file_format = "rst"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
  "--color=yes",      # color test output
  "--doctest-rst",    # enable doctests
  "--strict-config",  # fail on unknown config options
  "--strict-markers", # fail on unknown markers
  "-ra",              # Show summary of all failures/errors
]
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  "ignore:The `hash` argument is deprecated in favor of `unsafe_hash` and will be removed in or after August 2025:DeprecationWarning",
]
env = ["ROMAN_VALIDATE=true", "ROMAN_STRICT_VALIDATION=true"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "def main\\(.*\\):",
  "if __name__ == \\(.*\\):",
  "pass\\n",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
extend-select = [
  "UP",  # PyUpgrade
  "I",   # isort
  "B",   # BugBear
  "S",   # Bandit
  "RUF", # ruff specific
  "NPY", # numpy specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101", # Bandit: Use of assert detected (fine in test files)
]
"src/roman_datamodels/testing.py" = [
  "S101", # Bandit: Use of assert detected (useful public API for testing only)
]

[tool.codespell]
skip = "*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/_build"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "roman_datamodels"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/spacetelescope/roman_datamodels/issues/{issue}>`_"

[tool.towncrier.fragment.feature]
name = "New Features"

[tool.towncrier.fragment.bugfix]
name = "Bug Fixes"

[tool.towncrier.fragment.doc]
name = "Documentation"

[tool.towncrier.fragment.removal]
name = "Deprecations and Removals"

[tool.towncrier.fragment.misc]
